# LabySimulateur

./: .gitignore  CMakeLists.txt  README.md  api.h  laby_conf.h  main.c  utils.c  utils.h
algorithm/: CMakeLists.txt  explore.c  explore.h  state.c  state.h
gui/: CMakeLists.txt  gui.c  gui.h  simulator.h
laby/: laby.h  laby_export_format.txt  laby_gen.c  laby_io.c
saved/: laby_1665524724.txt
simulator/: CMakeLists.txt  factice_middleware.c  gui.c  gui.h  simulator.c  simulator.h
